--- a/Erp.WebApp/Views/Admin/CustomerDetail.cshtml
+++ b/Erp.WebApp/Views/Admin/CustomerDetail.cshtml
@@ -227,7 +227,7 @@
         margin-right: 1rem;
     }
 
-    @keyframes spin {
+    keyframes spin {
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
     }
